--- a/.github/workflows/Intel.yml
+++ b/.github/workflows/Intel.yml
@@ -1,15 +1,16 @@
+# This is a GitHub CI workflow for the NCEPLIBS-ncio project.
+#
+# This workflow runs the intel compiler.
+#
+# Ed Hartnett 1/12/23
 name: Intel
 on:
   push:
     branches:
     - develop
-    paths-ignore:
-    - README.md
   pull_request:
     branches:
     - develop
-    paths-ignore:
-    - README.md
 
 # Use custom shell with -l so .bash_profile is sourced which loads intel/oneapi/setvars.sh
 # without having to do it in manually every step
