--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -1,15 +1,16 @@
+# This is a GitHub CI workflow for the NCEPLIBS-ncio project.
+#
+# This workflow runs the build on Linux.
+#
+# Ed Hartnett 1/12/23
 name: Linux
 on:
   push:
     branches:
     - develop
-    paths-ignore:
-    - README.md
   pull_request:
     branches:
     - develop
-    paths-ignore:
-    - README.md
 
 jobs:
   Linux:
