--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -1,15 +1,16 @@
+# This is a GitHub CI workflow for the NCEPLIBS-ncio project.
+#
+# This workflow runs the build on MacOS.
+#
+# Ed Hartnett 1/12/23
 name: MacOS
 on:
   push:
     branches:
     - develop
-    paths-ignore:
-    - README.md
   pull_request:
     branches:
     - develop
-    paths-ignore:
-    - README.md
 
 jobs:
   MacOS:
