--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -27,7 +27,7 @@ jobs:
     - name: install-dependencies
       run: |
         brew update
-        brew install mpich
+        brew install --verbose mpich
         sudo ln -sf /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
 
     - name: cache-netcdf
