--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -26,9 +26,15 @@ jobs:
 
     - name: install-dependencies
       run: |
+        set -x
         brew update
-        brew install --verbose sbtn mpich
+        brew install --verbose sbtn
+        brew install --verbose mpich
         sudo ln -sf /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
+        echo $PATH
+        ls -l /bin
+        ls -l /usr/bin
+        ls -l /usr/local/bin
 
     - name: cache-netcdf
       id: cache-netcdf
