--- a/.github/workflows/MacOS.yml
+++ b/.github/workflows/MacOS.yml
@@ -27,10 +27,13 @@ jobs:
     - name: install-dependencies
       run: |
         set -x
+        echo $PATH
+        ls -l /bin
+        ls -l /usr/bin
+        ls -l /usr/local/bin
         brew update
         brew install --verbose mpich
         sudo ln -sf /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
-        echo $PATH
         ls -l /bin
         ls -l /usr/bin
         ls -l /usr/local/bin
