--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -87,7 +87,9 @@ jobs:
     
     - name: test
       run: |
-        cd $GITHUB_WORKSPACE/NCEPLIBS-ncio/build
+        pwd
+        ls -l *
+        cd $GITHUB_WORKSPACE/build
         ctest --verbose --output-on-failure --rerun-failed
         gcovr --root .. -v  --html-details --exclude ../tests --exclude CMakeFiles --print-summary -o test-coverage.html &> /dev/null
 
