--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -17,8 +17,8 @@ jobs:
   developer:
     runs-on: ubuntu-latest
     env:
-      FC: gfortran-9
-      CC: gcc-9
+      FC: gfortran
+      CC: gcc
 
     steps:
 
@@ -27,8 +27,7 @@ jobs:
     - name: install-dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install libmpich-dev
-        sudo apt-get install doxygen
+        sudo apt-get install libmpich-dev doxygen
         python3 -m pip install gcovr
 
     - name: cache-netcdf
