trying to fix code coverage

--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -5,13 +5,7 @@
 #
 # Ed Hartnett 1/12/23
 name: developer
-on:
-  push:
-    branches:
-    - develop
-  pull_request:
-    branches:
-    - develop
+on: [push, pull_request]
 
 jobs:
   developer:
@@ -19,6 +13,9 @@ jobs:
     env:
       FC: gfortran
       CC: gcc
+
+    strategy:
+      fail-fast: true
 
     steps:
 
@@ -85,15 +82,16 @@ jobs:
         export CC=mpicc
         set -x
         cd ncio
-        mkdir build && cd build
+        mkdir build
+        cd build
         cmake -DCMAKE_BUILD_TYPE=Debug -DENABLE_DOCS=Yes -DCMAKE_PREFIX_PATH='~;~/netcdf' -DCMAKE_Fortran_FLAGS="-g -fprofile-abs-path -fprofile-arcs -ftest-coverage -O0 -Wall" -DCMAKE_C_FLAGS="-g -fprofile-abs-path -fprofile-arcs -ftest-coverage -O0 -Wall" ..
         make -j2 VERBOSE=1
     
     - name: test
       run: |
+        cd $GITHUB_WORKSPACE/ncio/build
         pwd
         ls -l 
-        cd $GITHUB_WORKSPACE/ncio/build
         ctest --verbose --output-on-failure --rerun-failed
         gcovr --root .. -v  --html-details --exclude ../tests --exclude CMakeFiles --print-summary -o test-coverage.html
 
@@ -101,5 +99,5 @@ jobs:
       with:
         name: test-coverage
         path: |
-          NCEPLIBS-ncio/build/*.html
-          NCEPLIBS-ncio/build/*.css
+          ncio/build/*.html
+          ncio/build/*.css
