working on gcovr problem

--- a/.github/workflows/developer.yml
+++ b/.github/workflows/developer.yml
@@ -5,7 +5,13 @@
 #
 # Ed Hartnett 1/12/23
 name: developer
-on: [push, pull_request]
+on:
+  push:
+    branches:
+    - develop
+  pull_request:
+    branches:
+    - develop
 
 jobs:
   developer:
